feat: add response converters to support multiple A2A client events
PiperOrigin-RevId: 856551560